# django-vue-webpack

./: .gitignore  README.md  manage.py  pyproject.toml  urls.py
apps/todo/: admin.py  models.py  urls.py  utils.py  views.py
apps/todo/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  webpack-stats.json  webpack.config.js
frontend/assets/js/: main.js
settings/: settings.py
templates/: base.html  todoList.html
templates/vue/: index.html
